# DTP2022_PhotonQuark

./: .gitignore  CMakeLists.txt  README.md  art  compile_commands.json
Quark_Photon_Vertex/: CMakeLists.txt  Simulation.cpp
Quark_Photon_Vertex/include/: Kernels_G.hh  Kernels_K.hh  WTI.hh  basistransform.h  basistransform.hh  coeff.hh  fileIO.hh  geesf.hh  iteration.hh  kernel_calculation.hh  maris_tandy.hh  momentumtransform.hh  parameters.hh  quark_dse.hh  quark_model_functions.hh  types.hh
Quark_Photon_Vertex/source/: quark_model_functions.cpp  quark_model_functions.h
core/include/: ChebyshevPolynomials.hh  LegendrePolynomials.hh  LinearInterpolate.hh  PolynomialBase.hh  QuadratureIntegral.hh  Utils.hh  fileIO.hh
flashtalk/: .gitignore  DTP2022_PhotonQuarkflashtalk.tex  beamer.tex  main.tex  slide 5.tex  slide1.tex  slide2.tex  slide3.tex  slide4.tex  slide4_5.tex  slide6.tex  slide7.tex  slide8.tex
gnuplot_script/: fg.gplt  plot1.gptl  wti.gplt
scripts/: compile_tex.sh
warm_up/: .gitignore  CMakeLists.txt
